[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphs_JoachinK"
version = "0.1.0"
description = "A Python library implementing graph algorithms including Dijkstra's shortest path"
authors = [{name = "Joachin K", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/joachinkeptot/graphs_JoachinK"
Repository = "https://github.com/joachinkeptot/graphs_JoachinK"
Issues = "https://github.com/joachinkeptot/graphs_JoachinK/issues"
